# CERN-Summer-Student-Project

Project/: CMakeLists.txt  CombineROOTFiles.py  README.md  analysis.py  analysis_depth.py  analysis_helpers.py  analysis_plotters.py  analysis_thickness.py  construction.cc  construction.hh  dciarnie.cc.gitignore  generator.cc  make_config.py  no_vis.mac  output.root  output_test.root  physics.cc  physics.hh  run.mac  run_batch.sh  setup.sh  sim.cc  simulation.cc  vis.mac
Project/batch/: SAMPLE_batch.sub  batch.sub  batch1.sub  batch2.sub  batch_decay.sub  batch_thickness.sub
Project/config/: config.txt  config_e-_mu-.txt  config_full.txt  config_general_20230815-103745.txt  config_general_20230815-103801.txt  config_general_20230817-134614.txt  config_general_20230817-134653.txt  config_general_20230817-134747.txt  config_general_20230817-134752.txt  config_general_20230817-134800.txt  config_general_20230817-134807.txt  config_general_20230817-134814.txt  config_general_20230817-134820.txt  config_mu+_125MeV_70-90_fine_copper_20230811-170640.txt  config_mu+_125MeV_70-90_fine_gold_20230814-174226.txt  config_mu+_125MeV_70-90_fine_goldplatedcopper_20230811-170814.txt  config_mu+_125MeV_80-90_fine_glass_20230811-170743.txt  config_mu+_28MeV_65-90_fine_goldplatedcopper_20230811-170528.txt  config_mu+_28MeV_70-90_fine_copper_20230811-170024.txt  config_mu+_28MeV_70-90_fine_gold_20230814-174028.txt  config_mu+_28MeV_75-90_fine_glass_20230811-170243.txt  config_mu+_80MeV_1mm_20230811-163203_thickness.txt  config_mu+_80MeV_2mm_20230811-163148_thickness.txt  config_mu+_proton.txt  config_mu-_125MeV_70-90_fine_copper_20230811-170640.txt  config_mu-_125MeV_70-90_fine_gold_20230814-174226.txt  config_mu-_125MeV_70-90_fine_goldplatedcopper_20230811-170814.txt  config_mu-_125MeV_80-90_fine_glass_20230811-170743.txt  config_mu-_28-125MeV_full_aluminium_20230817-145300.txt  config_mu-_28-125MeV_full_brass_20230817-145414.txt  config_mu-_28-125MeV_full_bronze_20230817-145407.txt  config_mu-_28-125MeV_full_copper_20230817-133200.txt  config_mu-_28-125MeV_full_glass_20230817-133311.txt  config_mu-_28-125MeV_full_gold_20230817-133338.txt  config_mu-_28-125MeV_full_goldplatedcopper_10um_20230817-142520.txt  config_mu-_28-125MeV_full_iron_20230817-145332.txt  (+30 more)
(+47 files in other folders)
